--- a/Convert HTMl to node js/server/views/products.ejs
+++ b/Convert HTMl to node js/server/views/products.ejs
@@ -56,6 +56,7 @@
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         transition: transform 0.3s, box-shadow 0.3s;
         cursor: pointer;
+        width: 300px;
       }
 
       .product-card:hover {
@@ -109,14 +110,20 @@
       }
 
       ul {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        margin-top: 40px;
+        display: grid;
+        grid-template-columns: repeat(
+          3,
+          1fr
+        ); /* Creates 3 equal-width columns */
+        gap: 20px; /* Adds space between the grid items */
+        list-style-type: none; /* Removes the default list bullets */
+        padding: 0; /* Removes default padding */
+        margin: 80px auto; /* Adds some space above the grid */
       }
 
       ul li {
         margin-bottom: 15px;
+        list-style-type: none;
       }
 
       footer {
